--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/widmo34/15.6#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-latest": "^6.24.1"
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
